# context-maintainer

./: .env.example  .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: README.md  release.yml
designs/bugfixes-auto-hide-and-open-app/: SCOPES.yml
designs/changelog-and-auto-update/: DESIGN.md  SCOPES.yml
designs/common-apps/: SCOPES.yml
designs/flat-panel-layout/: SCOPES.yml
designs/multi-monitor-fixes/: SCOPES.yml
designs/ux-fixes-round2/: SCOPES.yml
designs/window-visibility-and-fullscreen-fixes/: SCOPES.yml
scripts/: generate-signing-key.sh  release.sh  version-bump.mjs  version-bump.test.mjs
src/: App.tsx  changelog.ts  constants.ts  snapPosition.test.mjs  snapPosition.ts  styles.css  theme.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AccordionView.tsx  AnchorView.tsx  HistoryPickerView.tsx  HistoryView.tsx  InfoView.tsx  LoadingView.tsx  SessionChooserView.tsx  SettingsView.tsx  SetupView.tsx  TodoItem.tsx  UpdateBanner.tsx  WhatsNewModal.tsx
src/components/AccordionView/: AccordionView.tsx  index.tsx
src/components/AccordionView/components/: CollapsibleSection.tsx  HeaderNav.tsx  (+8 more)
src/components/Modal/: Modal.consts.ts  RenderModal.tsx  index.tsx
src/components/shared/: AppButton.tsx  AppIconButton.tsx  AppInput.tsx  NumericInput.tsx  SectionTitle.tsx  index.ts
src/stores/: index.ts  useDesktopStore.ts  useHistoryStore.ts  useSettingsStore.ts  useTimerStore.ts  useTodoStore.ts  useUIStore.ts
(+12 files in other folders)
