[package]
name = "context-switching"
version = "0.4.3"
description = "macOS desktop space indicator"
authors = ["you"]
edition = "2021"

[lib]
name = "context_switching_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
log = "0.4"
