[package]
name = "context-switching"
version = "0.9.2"
description = "macOS desktop space indicator"
authors = ["you"]
edition = "2021"

[lib]
name = "context_switching_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSString", "NSObject", "NSOperation"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
block2 = "0.6"
